--- a/public/style/all.css
+++ b/public/style/all.css
@@ -1,3 +1,6 @@
 @import url(https://db.onlinewebfonts.com/c/a1750a4dae8db954fdd595f313b3b34e?family=Graphik+Kinopoisk+LC+Web+SB+Regular);
 @import url('vendor/reset.css');
 @import url('components/header.css');
+@import url('vendor/same.css');
+@import url('pages/index.css');
+@import url('pages/form.css');
