--- a/public/style/components/header.css
+++ b/public/style/components/header.css
@@ -3,6 +3,11 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #fff;
 }
 
 .head-logo{
