--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,36 @@
 <html lang="en">
 <head>
     <%- include('partials/head.ejs')%>
+    <script src="https://kit.fontawesome.com/235d4797a2.js" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
 <body>
     <%- include('partials/header.ejs')%>
-    <div class="container">
+    <div class="container">     
         <div class="main">
             <div class="main-content">
                 <h2>Блоги по программированию</h2>
                 <p>Популярные и лучшие публикации по программированию для начинающих
                     и профессиональных программистов и IT-специалистов.</p>
                 <img src="/images/image1.png" alt="">
+                <h4>Обзор Report Manager от Webix</h4>
+                <h5>
+                    Осень 2020 года стала плодотворным временем для специалистов Webix.
+                </h5>
+                <h5> 
+                    Команда Webix выпустила восьмую версию библиотеки пользовательского интерфейса Webix с двумя новыми комплексными виджетами. Первый - зто Scheduler, о котором мы подробно говорили ранее. Второй виджет - это Gantt chart в JavaScript. Подробную информацию об этом виджете Вы можете найти в статье. 
+                </h5>
+                <h5>
+                    Ноябрь продолжает тенденцию, и мы спешим поделиться с Вами новым комплексным виджетом Report Manager. Давайте рассмотрим его
+                </h5>
+                <div class="main-under-content">
+                    <i class="fa-regular fa-calendar"></i>
+                    <i class="fa-solid fa-comments"></i>
+                    <i class="fa-solid fa-user"></i>
+                </div>
             </div>
+            
             <div class="categories">
                 <h3>Категории</h3>
                 <a href="">Прогнозы в IT</a>
