--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,9 @@
 <header>
     <div class="head-logo">
-        <h1>Decode Blog</h1>
+        <a href="/">
+            <h1>Decode Blog</h1>
+        </a>
+        
     </div>
     <div class="head-search">
         <input type="text" placeholder="Поиск по блогам">
